fix issue with contact link

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -121,7 +121,7 @@
                     I also have extensive experience with Squarespace and WordPress.
                 </p>
                 
-                <p>Have a project you'd like to discuss? <a href="contact/index.html" class="fancy-link">Let's make something great together!</a></p>
+                <p>Have a project you'd like to discuss? <a href="../contact/index.html" class="fancy-link">Let's make something great together!</a></p>
             </div>
         </div><!-- End parent flexbox container -->
         
