--- a/contact/index.html
+++ b/contact/index.html
@@ -174,7 +174,7 @@
             </li>
 
             <li>
-                <a href="https://https://www.facebook.com/mark.reid.507/" target="_blank">
+                <a href="https://www.facebook.com/mark.reid.507/" target="_blank">
                     <i class="fab fa-facebook"></i>
                 </a>
             </li>
